Various tweaks/additions: * Fix homepage hero being cut off * Remove footer links * Add Gatsby GTM plugin

--- a/src/styles/_components/homepage-hero.scss
+++ b/src/styles/_components/homepage-hero.scss
@@ -119,7 +119,7 @@
   }
 
   @media only screen and (min-width: 768px) {
-    max-width: 480px;
+    max-width: 550px;
     margin: 0 auto;
   }
 
